# sqlds

./: .gitignore  README.md  ds.py  egg.py  input.py  jest.config.js  main.py  orm.py  output.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: npm.yml  pre-commit.yml  pytest.yml  wheels.yml
ddss/: __init__.py  ds.py  dump.py  egg.py  egraph.py  input.py  main.py  main.ts  orm.py  orm.ts  output.py  poly.py  utility.py
tests/: test_ds.py  test_egg.py  test_input.py  test_output.py
