[project]
name = "ddss"
version = "0.0.15"
description = "Distributed Deductive System Sorts"
license = "AGPL-3.0-or-later"
readme = "README.md"
authors = [{ email = "hzhangxyz@outlook.com", name = "Hao Zhang" }]
requires-python = ">=3.13"
dependencies = [
    "apyds~=0.0.9",
    "apyds-bnf~=0.0.9",
    "cloudpickle~=3.1.2",
    "egglog~=12.0.0",
    "prompt-toolkit~=3.0.52",
    "sqlalchemy[aiosqlite,aiomysql,postgresql-asyncpg]~=2.0.45",
]

[project.urls]
Repository = "https://github.com/USTC-KnowledgeComputingLab/ddss.git"

[build-system]
requires = ["uv_build~=0.9.17"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ddss"
module-root = ""

[project.scripts]
ddss = "ddss.main:cli"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
