[project]
name = "ddss"
dynamic = ["version"]
description = "Distributed Deductive System Sorts"
license = "AGPL-3.0-or-later"
readme = "README.md"
authors = [{ email = "hzhangxyz@outlook.com", name = "Hao Zhang" }]
requires-python = ">=3.13"
dependencies = [
    "apyds~=0.0.9",
    "apyds-bnf~=0.0.9",
    "cloudpickle~=3.1.2",
    "egglog~=12.0.0",
    "prompt-toolkit~=3.0.52",
    "sqlalchemy[aiosqlite,aiomysql,postgresql-asyncpg]~=2.0.45",
]

[project.urls]
Repository = "https://github.com/USTC-KnowledgeComputingLab/ddss.git"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ddss"]

[tool.setuptools_scm]
version_file = "ddss/_version.py"

[project.scripts]
ddss = "ddss.main:cli"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
