[project]
name = "ddss"
dynamic = ["version"]
description = "Distributed Deductive System Sorts"
license = "AGPL-3.0-or-later"
readme = "README.md"
authors = [{ email = "hzhangxyz@outlook.com", name = "Hao Zhang" }]
requires-python = ">=3.11"
dependencies = [
    "apyds~=0.0.11",
    "apyds-bnf~=0.0.11",
    "apyds-egg~=0.0.11",
    "prompt-toolkit~=3.0.52",
    "sqlalchemy[aiosqlite,aiomysql,postgresql-asyncpg]~=2.0.45",
]

[project.urls]
Repository = "https://github.com/USTC-KnowledgeComputingLab/ddss.git"

[build-system]
requires = ["setuptools~=80.9.0", "setuptools-scm~=9.2.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ddss"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
fallback_version = "0.0.0"

[project.scripts]
ddss = "ddss.main:cli"

[project.optional-dependencies]
dev = [
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.0.0",
    "ruff~=0.14.10",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
